--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>UT SHPE</title>
+    <link rel="icon" href="assets/images/SHPE_logo.png">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     
 </head>
