--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>UT SHPE</title>
     <link rel="icon" href="assets/images/SHPE_logo.png">
     <link rel="stylesheet" href="assets/css/style.css">
-
-    
+    <!-- will link lots of photosfor /chaning pictures once we decide which ones -->
+    <!-- will also link whatever fonts/extra external scripts we may use-->
+    <script src="assets/javascript/main.js"></script>
 </head>
+
+<body>
+    <!-- Navbar-->
+    <nav class="container-fluid">
+        <a class="navbar-brand" href="index.html"> <img src="assets\
+</body>
+    
 </html>
