--- a/index.html
+++ b/index.html
@@ -64,10 +64,37 @@
                             <img src="assets/images/sponsors/Accenture_logo.png" alt="Accenture">
                         </div>
                         <!-- Idk, need to reach out to Alex -->
-                        <div class="sponsor-back">Gold Sponsor</div>
+                        <div class="sponsor-back">Tier 4</div>
                     </div>   
                 </div>
                 <!-- Sponsor 2 -->
+                <div class="sponsor">
+                    <div class="sponsor-inner"> 
+                        <div class="sponsor-front"> 
+                            <img src="assets/images/sponsors/Dell_logo.png" alt="Dell">
+                        </div>
+                        <div class="sponsor-back">Tier 2</div>
+                    </div>   
+                </div>
+                <!-- Sponsor 3 -->
+                <div class="sponsor">
+                    <div class="sponsor-inner"> 
+                        <div class="sponsor-front"> 
+                            <img src="assets/images/sponsors/ARM_logo.png" alt="ARM">
+                        </div>
+                        <div class="sponsor-back">2x Tier 1</div>
+                    </div>   
+                </div>
+                <!-- Sponsor 4 -->
+                <div class="sponsor">
+                    <div class="sponsor-inner"> 
+                        <div class="sponsor-front"> 
+                            <img src="assets/images/sponsors/ARM_logo.png" alt="ARM">
+                        </div>
+                        <div class="sponsor-back">2x Tier 1</div>
+                    </div>   
+                </div>
+                
                 
             </div>
         </div>
