--- a/index.html
+++ b/index.html
@@ -55,29 +55,18 @@
     <!-- 3/4 photos/ flyers of weekly events to showcase, arrows to click through them-->
     <hr>
     <section class="next-event">
-      <h2 class="section-title">Next Event</h2>
-      <div id="Events" class="carousel slide" data-bs-ride="false">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/images/events/event1.png" class="d-block w-100" alt="Event 1">
+        <h2 class="section-title">Next Event</h2>
+        <div class="event-carousel">
+          <button class="carousel-btn prev">&#10094;</button>
+          <div class="event-track">
+            <img src="assets/images/events/event1.png" alt="Event 1">
+            <img src="assets/images/events/event2.png" alt="Event 2">
+            <img src="assets/images/events/event3.png" alt="Event 3">
           </div>
-          <div class="carousel-item">
-            <img src="assets/images/events/event2.png" class="d-block w-100" alt="Event 2">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/images/events/event3.png" class="d-block w-100" alt="Event 3">
-          </div>
-        </div>
+          <button class="carousel-btn next">&#10095;</button>
+        </div> 
+    </section>
 
-    <!-- Arrows only -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#eventCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
-</section>
 
     <!-- Sponsors section, Need to reach out ot alex to get updated list and all photos,
     I also want to impliment hover features like when you hover a logo it flips and shows sponsor level -->
