--- a/index.html
+++ b/index.html
@@ -130,7 +130,16 @@
             Link your Calendar for upcoming Events!
         </p>
     </section>
-    
-    
+
+    <!-- Office hours-->
+    <section id="office-hours" style="padding: 60px 00; text-align: center;">
+        <h2 style="color: #8B4513; font-size: 2.5rem; margin-bottom: 30px;">Office Hours</h2>
+        <img src="assets/images/office_hours.png"
+            alt="LeaderSHPE Office Hours"
+            style="width: 90%; max-width: 1400px; height: auto; border-radius: 8px; box-shadow: 0 6px 14px rgba(0,0,0,0.15);">
+        <p style="margin-top: 20px; font-size: 1.1rem; color: #333; max-width: 900px; margin-left: auto; margi-right: auto;">
+            Visit us during office hours to connect with our leadership team, learn more about our pillars, or ask about becoming a memeber!
+        </p>
+    </section>  
 </body>
 </html>
