--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Navbar-->
     <header class="nav">
-        <a class="brand" href="/"> 
+        <a class="brand" href="index.html"> 
             <img src="assets/images/navbar_logo.png"> <!-- clickable logo -->
         </a>
 
