--- a/index.html
+++ b/index.html
@@ -88,7 +88,35 @@
             </div>
              <!-- Sponsor 4 -->
             <div class="sponsor">
-                <img src="assets/images/sponsors/ARM_logo.png" alt="ARM">
+                <img src="assets/images/sponsors/BP_logo.png" alt="BP">
+            </div>  
+            <!-- Sponsor 4 -->
+            <div class="sponsor">
+                <img src="assets/images/sponsors/Micron_logo.png" alt="Micron">
+            </div> 
+            <!-- Sponsor 4 -->
+            <div class="sponsor">
+                <img src="assets/images/sponsors/Spectrum_logo.png" alt="Spectrum">
+            </div> 
+            <!-- Sponsor 4 -->
+            <div class="sponsor">
+                <img src="assets/images/sponsors/Tesla_logo.png" alt="Tesla">
+            </div>    
+            <!-- Sponsor 4 -->
+            <div class="sponsor">
+                <img src="assets/images/sponsors/Texas_Instruments_logo.png" alt="TI">
+            </div>    
+            <!-- Sponsor 4 -->
+            <div class="sponsor">
+                <img src="assets/images/sponsors/P&G_logo.png" alt="P&G">
+            </div>    
+            <!-- Sponsor 4 -->
+            <div class="sponsor">
+                <img src="assets/images/sponsors/lockheedmartin_logo.png" alt="Lockheed Martin">
+            </div>   
+            <!-- Sponsor 4 -->
+            <div class="sponsor">
+                <img src="assets/images/sponsors/LPL_Financial_logo.png" alt="LPL">
             </div>    
         </div>
     </section>
