--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
             </div>
              <!-- Sponsor 4 -->
             <div class="sponsor">
-                <img src="assets/images/sponsors/BP_logo.jpg" alt="BP">
+                <img src="assets/images/sponsors/BP_logo.png" alt="BP">
             </div>  
             <!-- Sponsor 5 -->
             <div class="sponsor">
-                <img src="assets/images/sponsors/Micron_logo.jpg" alt="Micron">
+                <img src="assets/images/sponsors/Micron_logo.png" alt="Micron">
             </div> 
             <!-- Sponsor 6 -->
             <div class="sponsor">
@@ -108,7 +108,7 @@
             </div>    
             <!-- Sponsor 9 -->
             <div class="sponsor">
-                <img src="assets/images/sponsors/PG_logo.jpg" alt="P&G">
+                <img src="assets/images/sponsors/PG_logo.png" alt="P&G">
             </div>    
             <!-- Sponsor 10 -->
             <div class="sponsor">
