--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div class="event-carousel">
           <button class="carousel-btn prev">&#10094;</button>
           <div class="event-track">
-            <img src="assets/images/events/event1.png" alt="Event 1">
-            <img src="assets/images/events/event2.png" alt="Event 2">
-            <img src="assets/images/events/event3.png" alt="Event 3">
+            <img src="assets/images/Home_Page/Event1.png" alt="Event 1">
+            <img src="assets/images/Home_Page/Event2.jpg" alt="Event 2">
+            <img src="assets/images/Home_Page/Eventweek.png" alt="Event 3">
           </div>
           <button class="carousel-btn next">&#10095;</button>
         </div> 
