--- a/index.html
+++ b/index.html
@@ -32,40 +32,36 @@
 
     <!-- main frong page -->
     <section class="info">
-        <div class="info-left">
-            <h1>UT SHPE</h1>
-            <p class="sub">The University of Texas at Austin</p>
-            <p class="mission">
-                Our mission is to empower Hispanic students in STEM through community, mentorship, 
-                and professional development.
-            </p>
-            <a href="membership.html" class="btn btn-primary">Join Now!</a>
-        </div>
+  <div class="info-left">
+    <h1>UT SHPE</h1>
+    <p class="sub">The University of Texas at Austin</p>
+    <p class="mission">
+      Our mission is to empower Hispanic students in STEM through community, mentorship, 
+      and professional development.
+    </p>
+    <a href="membership.html" class="btn btn-primary">Join Now!</a>
+  </div>
 
-        <!-- Center: Changing Polaroid Photos? -->
-        <div class="polaroid">
-            <div class="frame">
-                <!-- Images slideshow for main page -->
-                <img id="slideshow-img" src="assets/images/Home_Page/slideshow1.jpg" alt="UT SHPE Photos">
-            </div>
-        </div>
-    </section>
+  <!-- Right column: slideshow + flyers strip -->
+  <div class="hero-right">
+    <div class="polaroid">
+      <div class="frame">
+        <img id="slideshow-img" src="assets/images/Home_Page/slideshow1.jpg" alt="UT SHPE Photos">
+      </div>
+    </div>
 
-    <!-- Next Event Section -->
-    <!-- 3/4 photos/ flyers of weekly events to showcase, arrows to click through them-->
-    <hr>
-    <section class="next-event">
-        <h2 class="section-title">Next Event</h2>
-        <div class="event-carousel">
-          <button class="carousel-btn prev">&#10094;</button>
-          <div class="event-track">
-            <img src="assets/images/Home_Page/Event1.png" alt="Event 1">
-            <img src="assets/images/Home_Page/Event2.jpg" alt="Event 2">
-            <img src="assets/images/Home_Page/Eventweek.png" alt="Event 3">
-          </div>
-          <button class="carousel-btn next">&#10095;</button>
-        </div> 
-    </section>
+    <!-- compact flyers strip in the upper-right -->
+    <div class="flyer-strip" aria-label="Upcoming events">
+      <button class="flyer-btn prev" aria-label="Previous">❮</button>
+      <div class="flyer-track">
+        <img src="assets/images/Home_Page/Event1.png" alt="Event 1">
+        <img src="assets/images/Home_Page/Event2.jpg" alt="Event 2">
+        <img src="assets/images/Home_Page/Eventweek.png" alt="Event 3">
+      </div>
+      <button class="flyer-btn next" aria-label="Next">❯</button>
+    </div>
+  </div>
+</section>
 
 
     <!-- Sponsors section, Need to reach out ot alex to get updated list and all photos,
