--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!-- Navbar menu links -->
         <nav class="menu">
-            <a href="about.html" class="nav-link">About</a>
+            <a href="About_Us.html" class="nav-link">About Us</a>
             <a href="leadership.html" class="nav-link">Leadership</a>
             <a href="sponsorship.html" class="nav-link">Sponsorship</a>
             <!-- special case for shpetinas, will be bold pink-->
