--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <hr> 
     <section class="sponsors-slideshow">
         <h2 class="section-title">Our Sponsors</h2>
+        <a class="btn btn-primary sponsor-cta" href="sponsorship.html">Become a Sponsor</a>
         <div class="sponsor-carousel">
             <!-- Sponsor 1 -->
             <div class="sponsor">
