--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
     <!-- Sponsors section -->
     <hr> 
     <section class="sponsors-slideshow">
+        <div class="sponsor-header">
         <h2 class="section-title">Our Sponsors</h2>
         <a class="btn btn-primary sponsor-cta" href="sponsorship.html">Become a Sponsor</a>
+        </div>
         <div class="sponsor-carousel">
             <!-- Sponsor 1 -->
             <div class="sponsor">
