--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <h2 class="section-title">Our Sponsors</h2>
         <a class="btn btn-primary sponsor-cta" href="sponsorship.html">Become a Sponsor</a>
         </div>
+        <div class="section-rule"></div>
         <div class="sponsor-carousel">
             <!-- Sponsor 1 -->
             <div class="sponsor">
