--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="assets/css/style.css"> <!-- linkage to css code -->
     <!-- will link lots of photosfor /chaning pictures once we decide which ones -->
     <!-- will also link whatever fonts/extra external scripts we may use-->
-    <script src="assets/javascript/main.js"></script>
+    <!-- Icons for footer (Font Awesome) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <script src="assets/javascript/main.js" defer></script>
 </head>
 
 <body>
@@ -147,32 +149,40 @@
     </section>  
 
     
-    <div class="containter newback" id="footer">
-            <div class="row">
-                <div class="col-md-4 footer-info" style="text-align: center;">
-                    <h4>Contact Us</h4>
-                    <p>Primary Email: <a href="mailto:shpe@engr.utexas.edu" style="color: #BF5700">shpe.ut.president@gmail.com</a></p>
-                    <p>Corporate Email: <a href="mailto:utshpe@gmail.com" style="color: #BF5700">utshpe@gmail.com</a></p>
-                </div>
-                <div class="col-md-4 footer-info" style="text-align: center;">
-                    <h4>Follow us on Social Media</h4>
-                    <a href="https://www.facebook.com/shpeut/"><i class="fa-brands fa-facebook-square social-logo"></i></a>
-                    <a href="https://twitter.com/utshpe?lang=en"><i class="fa-brands fa-twitter-square social-logo"></i></a>
-                    <a href="https://www.tiktok.com/@utshpe"><i class="fa-brands fa-tiktok social-logo"></i></a>
-                    <a href="https://www.instagram.com/utshpe/?hl=en"><i class="fa-brands fa-instagram-square social-logo"></i></a>
-                    <a href="https://www.linkedin.com/company/utshpe"><i class="fa-brands fa-linkedin social-logo"></i></a>
-                    <a href="https://github.com/UTSHPE"><i class="fa-brands fa-github-square social-logo"></i></a>
-                </div>
-                <div class="col-md-4 footer-info" style="text-align: center;">
-                    <h4>Find more UT-SHPE resources at our</h4>
-                    <h4><a href="https://linktr.ee/UTSHPE" style="color: #BF5700">Linktree</a></h4>
-                </div>
-                <div class="col-md-12" style="padding: 15px">
-                    <hr style="opacity: 100%; width:90%; margin-inline-start: auto; margin-inline-end: auto;">
-                </div>
-            </div>
+    <!-- Footer -->
+  <div class="site-footer">
+    <div class="footer-grid">
+      <div class="footer-col">
+        <h4>Contact Us</h4>
+        <p>
+          Primary Email:
+          <a href="mailto:shpe.ut.president@gmail.com">shpe.ut.president@gmail.com</a>
+        </p>
+        <p>
+          Corporate Email:
+          <a href="mailto:utshpe@gmail.com">utshpe@gmail.com</a>
+        </p>
+      </div>
+
+      <div class="footer-col">
+        <h4>Follow us on Social Media</h4>
+        <div class="socials">
+          <a href="https://www.facebook.com/shpeut/" aria-label="Facebook"><i class="fa-brands fa-facebook-square"></i></a>
+          <a href="https://twitter.com/utshpe?lang=en" aria-label="Twitter / X"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://www.tiktok.com/@utshpe" aria-label="TikTok"><i class="fa-brands fa-tiktok"></i></a>
+          <a href="https://www.instagram.com/utshpe/?hl=en" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/utshpe" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/UTSHPE" aria-label="GitHub"><i class="fa-brands fa-github-square"></i></a>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592601151547216" crossorigin="anonymous"></script>
+      </div>
+
+      <div class="footer-col">
+        <h4>Find more UT-SHPE resources at our</h4>
+        <h4><a class="linktree" href="https://linktr.ee/UTSHPE">Linktree</a></h4>
+      </div>
+    </div>
+
+    <hr class="footer-rule" />
+  </div>
 </body>
 </html>
