--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Next Event Section -->
         <!-- 3/4 photos/ flyers of weekly events to showcase, arrows to click through them-->
         <section class="next-event">
-            <h2 class="section-title">Next Event</h2>
+            <h2 class="section-title">Upcoming Events</h2>
             <div class="event-carousel">
               <button class="carousel-btn prev">&#10094;</button>
               <div class="event-track">
