--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 
         <!-- Center: Changing Polaroid Photos? -->
         <div class="polaroid">
+            <div class="mini-hero">
+                <img class="mini-hero__logo" src="assets/images/SHPELeadingHispanics.png" alt="UT SHPE">
+                <div class="mini-hero__sub">The University of Texas at Austin</div>
+                <hr class="mini-hero__rule" />
+            </div>
             <div class="frame">
                 <!-- Images slideshow for main page -->
                 <img id="slideshow-img" src="assets/images/Home_Page/slideshow1.jpg" alt="UT SHPE Photos">
