--- a/About_Us.html
+++ b/About_Us.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>UT SHPE</title>
+    <link rel="icon" href="assets/images/SHPE_logo.png"> 
+    <link rel="stylesheet" href="assets/css/style.css"> <!-- linkage to css code -->
+    <!-- will link lots of photosfor /chaning pictures once we decide which ones -->
+    <!-- will also link whatever fonts/extra external scripts we may use-->
+    <!-- Icons for footer (Font Awesome) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <script src="assets/javascript/main.js" defer></script>
+</head>
+
+<body>
+    <!-- Navbar-->
+    <header class="nav">
+        <a class="brand" href="index.html"> 
+            <img src="assets/images/navbar_logo.png"> <!-- clickable logo -->
+        </a>
+
+        <!-- Navbar menu links -->
+        <nav class="menu">
+            <a href="About_Us.html" class="nav-link">About Us</a>
+            <a href="leadership.html" class="nav-link">Leadership</a>
+            <a href="sponsorship.html" class="nav-link">Sponsorship</a>
+            <!-- special case for shpetinas, will be bold pink-->
+            <a href="shpetinas.html" class="nav-link shpetinas">SHPEtinas</a>
+            <a href="membership.html" class="nav-link">Membership</a>
+            <a href="resources.html" class="nav-link">Resources</a>                
+        </nav>
+    </header>
 
