--- a/About_Us.html
+++ b/About_Us.html
@@ -6,12 +6,13 @@
     <title>UT SHPE</title>
     <link rel="icon" href="assets/images/SHPE_logo.png"> 
     <link rel="stylesheet" href="assets/css/style.css"> <!-- linkage to css code -->
+    <link rel="stylesheet" href="assets/css/about.css">
     <!-- Icons for footer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <script src="assets/javascript/main.js" defer></script>
 </head>
 
-<body>
+<body class="about">
     <!-- Navbar-->
     <header class="nav">
         <a class="brand" href="index.html"> 
@@ -29,4 +30,23 @@
             <a href="resources.html" class="nav-link">Resources</a>                
         </nav>
     </header>
+
+    <main class="about-page" role="main">
+        <section class="about-main" aria-label="About UT SHPE">
+            <div class="about-main__innner">
+                <h1>About Us</h1>
+                <p>
+                    We empower Hispanic students in STEM at The University of Texas at Austin through
+                    community, mentorship, academic support, and professional development.
+                </p>
+            </div>
+        </section>
+
+        <section>
+            
+        </section>
+
+    
+</body>
+</html>
 
