--- a/About_Us.html
+++ b/About_Us.html
@@ -42,7 +42,17 @@
             </div>
         </section>
 
+        <!-- mission -->
         <section>
+            <div class="section">
+                <div>
+                    <h2 class="section-title">Our Mission</h2>
+                    <p>
+                        SHPE's vision is a world where Hispanics are highly valued 
+                        and influential as the leading innovators, scientists, mathematicians, 
+                        and engineers.
+                    </p>
+                </div>
             
         </section>
 
