--- a/About_Us.html
+++ b/About_Us.html
@@ -37,17 +37,24 @@
             <div class="underline"></div>
         </section>
 
-        <!-- Mission and Section -->
+        <!-- Mission and vision -->
         <section class="mission-vision">
             <div class="section">
                 <div class="mission">
+                    <img src="assets/images/aboutus/ " alt="photo">
+                </div>
+                <div class="mission-text">
                     <h2>Our Mission</h2>
                     <p>
                         Our mission is to change lives by empowering the Hispanic community to reach its fullest potential 
                         and make a lasting impact on the world through STEM awareness, access, support, and development.
                     </p>
                 </div>
+                <!-- Vision -->
                 <div class="vision">
+                    <img src="assets/images/aboutus/ " alt="photo">
+                </div>
+                <div class="vision-text">
                     <h2>Our Vision</h2>
                     <p>
                         SHPE's vision is a world where Hispanics are highly valued and influential 
