--- a/About_Us.html
+++ b/About_Us.html
@@ -21,7 +21,7 @@
 
         <!-- Navbar menu links -->
         <nav class="menu">
-            <a href="About_Us.html" class="nav-link">About Us</a>
+            <a href="About_Us.html" class="nav-link active">About Us</a>
             <a href="leadership.html" class="nav-link">Leadership</a>
             <a href="sponsorship.html" class="nav-link">Sponsorship</a>
             <!-- special case for shpetinas, will be bold pink-->
