--- a/About_Us.html
+++ b/About_Us.html
@@ -81,7 +81,7 @@
         
                     <div class="stat">
                         <h3>210+</h3>
-                        <p>Average VIP General Meeting Attendance</p>
+                        <p>Average General Meeting Attendance</p>
                     </div>
         
                     <div class="stat">
