--- a/About_Us.html
+++ b/About_Us.html
@@ -41,7 +41,7 @@
         <section class="mission-vision">
             <div class="section">
                 <div class="mission">
-                    <img src="assets/images/aboutus/ " alt="photo">
+                    <img src="assets/images/aboutus/Aboutpic1" alt="photo">
                 </div>
                 <div class="mission-text">
                     <h2>Our Mission</h2>
@@ -52,7 +52,7 @@
                 </div>
                 <!-- Vision -->
                 <div class="vision">
-                    <img src="assets/images/aboutus/ " alt="photo">
+                    <img src="assets/images/aboutus/Aboutpic2" alt="photo">
                 </div>
                 <div class="vision-text">
                     <h2>Our Vision</h2>
