--- a/About_Us.html
+++ b/About_Us.html
@@ -33,7 +33,7 @@
 
     <main class="about-page" role="main">
         <section class="about-header">
-            <h1>About US</h1>
+            <h1>About Us</h1>
             <div class="underline"></div>
         </section>
 
