--- a/About_Us.html
+++ b/About_Us.html
@@ -110,7 +110,7 @@
                                 data-img="assets/images/aboutus/Academic.jpg"
                                 data-alt="Academic photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
-                            <span>Academic Dev</span>
+                            <span>Academic Development</span>
                             </button>
                             <!-- Chapter -->
                             <button class="pillars-tab"
@@ -120,7 +120,7 @@
                                 data-img="assets/images/aboutus/Chapter.jpg"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
-                            <span>Chapter Dev</span>
+                            <span>Chapter Development</span>
                             </button>
                             <!-- Community Outreach -->
                             <button class="pillars-tab"
@@ -130,7 +130,7 @@
                                 data-img="assets/images/aboutus/CommunityOutreach.jpeg"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
-                            <span>Community</span>
+                            <span>Community Outreach</span>
                             </button>
 
                             <!-- Leadership -->
@@ -141,7 +141,7 @@
                                 data-img="assets/images/aboutus/Leadership.jpg"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
-                            <span>Chapter Dev</span>
+                            <span>Leadership Development</span>
                             </button>
 
                             <!-- Professional Development -->
@@ -152,7 +152,7 @@
                                 data-img="assets/images/aboutus/Chapter.jpg"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
-                            <span>Professional Dev</span>
+                            <span>Professional Development</span>
                             </button>
 
                             <!-- Technical Development -->
@@ -163,7 +163,7 @@
                                 data-img="assets/images/aboutus/technicaldevelopment.jpg"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
-                            <span>Technical Dev</span>
+                            <span>Technical Development</span>
                             </button>
                         </div>
 
