--- a/About_Us.html
+++ b/About_Us.html
@@ -137,7 +137,7 @@
                             <button class="pillars-tab"
                                 role="tab" aria-selected="false"
                                 style="--icon: url('assets/images/aboutus/LeadershipIcon.png');"
-                                data-title="Chapter Development"
+                                data-title="Leadership Development"
                                 data-img="assets/images/aboutus/Leadership.jpg"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
@@ -148,7 +148,7 @@
                             <button class="pillars-tab"
                                 role="tab" aria-selected="false"
                                 style="--icon: url('assets/images/aboutus/ProfessionalDevIcon.png');"
-                                data-title="Chapter Development"
+                                data-title="Professional Development"
                                 data-img="assets/images/aboutus/Chapter.jpg"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
@@ -159,7 +159,7 @@
                             <button class="pillars-tab"
                                 role="tab" aria-selected="false"
                                 style="--icon: url('assets/images/aboutus/TechnicalDevIcon.png');"
-                                data-title="Chapter Development"
+                                data-title="Technical Development"
                                 data-img="assets/images/aboutus/technicaldevelopment.jpg"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
