--- a/About_Us.html
+++ b/About_Us.html
@@ -170,8 +170,7 @@
                         <div class="pillars-content" tabindex="-1">
                             <h3 id="pillar-title">Academic Development</h3>
                             <p id="pillar-body">
-                                The Academic Development pillar's main focus is to help SHPE students
-                                thrive academically and connect them with university and chapter resources.
+                                The Academic Development pillar focuses on study success and connecting members to chapter & campus resources.
                             </p>
                         </div>
                     </div>
