--- a/About_Us.html
+++ b/About_Us.html
@@ -160,7 +160,7 @@
                                 role="tab" aria-selected="false"
                                 style="--icon: url('assets/images/aboutus/TechnicalDevIcon.png');"
                                 data-title="Technical Development"
-                                data-img="assets/images/aboutus/technicaldevelopment.jpg"
+                                data-img="assets/images/aboutus/technicaldevelopment.png"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
                             <span>Technical Development</span>
