--- a/About_Us.html
+++ b/About_Us.html
@@ -127,7 +127,7 @@
                                 role="tab" aria-selected="false"
                                 style="--icon: url('assets/images/aboutus/CommunityOutreachIcon.png');"
                                 data-title="Community Outreach"
-                                data-img="assets/images/aboutus/CommunityOutreach.jpeg"
+                                data-img="assets/images/aboutus/CommunityOutreach.jpg"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
                             <span>Community Outreach</span>
