--- a/About_Us.html
+++ b/About_Us.html
@@ -184,7 +184,27 @@
                 </div>
             </div>        
         </section>
-        
+
+        <!-- History Section -->
+        <section class="history" id="history">
+            <div class="section">
+                <h2 class="history-title">Our History</h2>
+                <p class="history-text">
+                    UT SHPE was founded in 1982 as a subcommitee of the organization Pi Sigma Pi.
+                    Today our 300+ member chapter is known for building a thriving hispanic community of
+                    mathmeticians, scientists, and engineers. Our chapter is known for leadership, technical
+                    development, chapter growth, academic development, professional development, and 
+                    our community outreach throughout Austin. Today we continue that mission, supporting students, 
+                    connecting with industry, and giving back through service.
+                </p>
+
+                <div class="history-cta">
+                    <a class="btn btn-outline" href="">Bylaws</a>
+                    <a class="btn btn-outline" href="">Constitution</a>
+                    <a class="btn btn-outline" href="">Donate</a>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Footer -->
     <div class="site-footer">
