--- a/About_Us.html
+++ b/About_Us.html
@@ -199,9 +199,9 @@
                 </p>
 
                 <div class="history-cta">
-                    <a class="btn btn-outline" href="">Bylaws</a>
-                    <a class="btn btn-outline" href="">Constitution</a>
-                    <a class="btn btn-outline" href="">Donate</a>
+                    <a class="btn btn-outline" href="assets/files/2025-2026 UT SHPE Bylaws.pdf">Bylaws</a>
+                    <a class="btn btn-outline" href="assets/files/2025-2026 UT SHPE Constitution.pdf">Constitution</a>
+                    <a class="btn btn-outline" href="https://give.utexas.edu/?menu=OGPENCS&solicit=ESL&response=DJ0ESL=ENDS&comments=Society%20of%20Hispanic%20Professional%20Engineers%20%28SHPE%29%20Account:%2030-2116-8093">Donate</a>
                 </div>
             </div>
         </section>
