--- a/About_Us.html
+++ b/About_Us.html
@@ -149,7 +149,7 @@
                                 role="tab" aria-selected="false"
                                 style="--icon: url('assets/images/aboutus/ProfessionalDevIcon.png');"
                                 data-title="Professional Development"
-                                data-img="assets/images/aboutus/Chapter.jpg"
+                                data-img="assets/images/aboutus/ProfessionalDevelopment.png"
                                 data-alt="Chapter photo">
                             <span class="pillars-icon mask-icon" aria-hidden="true"></span>
                             <span>Professional Development</span>
