--- a/leadership.html
+++ b/leadership.html
@@ -6,8 +6,10 @@
     <title>UT SHPE</title>
     <link rel="icon" href="assets/images/SHPE_logo.png"> 
     <link rel="stylesheet" href="assets/css/style.css"> <!-- linkage to css code -->
+    <link rel="stylesheet" href="assets/css/leadership.css">
     <!-- Icons for footer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <script src="assets/javascript/leadership.js" defer></script>
 </head>
 
 <body>
@@ -20,7 +22,7 @@
         <!-- Navbar menu links -->
         <nav class="menu">
             <a href="About_Us.html" class="nav-link">About Us</a>
-            <a href="leadership.html" class="nav-link">Leadership</a>
+            <a href="leadership.html" class="nav-link active">Leadership</a>
             <a href="sponsorship.html" class="nav-link">Sponsorship</a>
             <!-- special case for shpetinas, will be bold pink-->
             <a href="shpetinas.html" class="nav-link shpetinas">SHPEtinas</a>
@@ -28,5 +30,25 @@
             <a href="resources.html" class="nav-link">Resources</a>                
         </nav>
     </header>
+
+    <main class="leader-page" role="main">
+        <section class="leader-hero">
+            <img src="assets/images/Leadership/Leadershipteam.png" alt="UT SHPE Leadership">
+        </section>
+
+        <section class="leader-intro section">
+            <h1 class="leader-title">Meet UT-SHPE's 2025-2026 Leadership Team!</h1>
+            <div class="leader-rule" aria-hidden="true"></div>
+            <p class="leader-text">
+                These are the amazing, determined individuals who make up our leaderSHPE team! Each of them carries
+                vital responsibilities that sustain our chapter's vision and mission, and they lead by example with
+                perserverance, dedication, and a passion for service.
+            </p>
+        </section>
+
+    </main>
+
+</body>
+</html>
 
     
