--- a/leadership.html
+++ b/leadership.html
@@ -46,6 +46,19 @@
             </p>
         </section>
 
+        <section class="leader-section section">
+            <h2 class="leader-h2">Executive Board</h2>
+            <div class="leader-grid">
+                <article class="officer-card">
+                    <img src="assets/images/leadership/ ">
+                    <div class="officer-body">
+                        <h3 class="officer-name"> </h3>
+                        <p class="officer-role"> </p>
+                    </div>
+                </article>
+
+                
+
     </main>
 
 </body>
