--- a/leadership.html
+++ b/leadership.html
@@ -49,16 +49,147 @@
         <section class="leader-section section">
             <h2 class="leader-h2">Executive Board</h2>
             <div class="leader-grid">
+                <!-- Genesis -->
                 <article class="officer-card">
-                    <img src="assets/images/leadership/ ">
+                    <img src="assets/images/leadership/Genesis.png">
                     <div class="officer-body">
-                        <h3 class="officer-name"> </h3>
-                        <p class="officer-role"> </p>
+                        <h3 class="officer-name">Genesis Aguirre</h3>
+                        <p class="officer-pronouns">She/Her</p>
+                        <p class="officer-role">President</p>
+                        <p class="officer-major">Civil Engineering</p>
                     </div>
                 </article>
 
-                
+                <!-- Alberto -->
+                 <article class="officer-card">
+                    <img src="assets/images/leadership/Alberto.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Alberto Rayon Cardenas</h3>
+                        <p class="officer-pronouns">He/Him</p>
+                        <p class="officer-role">Vice President External</p>
+                        <p class="officer-major">Mechanical Engineering</p>
+                    </div>
+                </article>
 
+                <!-- Julieta -->
+                 <article class="officer-card">
+                    <img src="assets/images/leadership/Julieta.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Julieta Rodriguez</h3>
+                        <p class="officer-pronouns">She/Her</p>
+                        <p class="officer-role">Vice President Internal</p>
+                        <p class="officer-major">Computer Science</p>
+                    </div>
+                </article>
+
+                <!-- Elysha -->
+                 <article class="officer-card">
+                    <img src="assets/images/leadership/Elysha.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Elysha Orozco</h3>
+                        <p class="officer-pronouns">She/Her</p>
+                        <p class="officer-role">Secretary</p>
+                        <p class="officer-major">Petroleum Engineering</p>
+                    </div>
+                </article>
+
+                <!-- Treasure -->
+                 <article class="officer-card">
+                    <img src="assets/images/leadership/Xitlali.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Xitlali Cardenas</h3>
+                        <p class="officer-pronouns">She/Her</p>
+                        <p class="officer-role">Treasure</p>
+                        <p class="officer-major">Computer Science</p>
+                    </div>
+                </article>
+
+            </div>
+        </section>
+
+        <!-- Board of Directors -->
+        <section class="leader-section section">
+            <h2 class="leader-h2">Board of Directors></h2>
+            <div class="leader-grid">
+                <!-- David -->
+                <article class="officer-card">
+                    <img src="assets/images/leadership/David.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">David Jasso</h3>
+                        <p class="officer-pronouns">He/Him</p>
+                        <p class="officer-role">Academic Director</p>
+                        <p class="officer-major">Chemical Engineering</p>
+                    </div>
+                </article>
+
+                <!-- Chris -->
+                <article class="officer-card">
+                    <img src="assets/images/leadership/Chris.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Chris Garcia</h3>
+                        <p class="officer-pronouns">He/Him</p>
+                        <p class="officer-role">Chapter Director</p>
+                        <p class="officer-major">Civil Engineering</p>
+                    </div>
+                </article>
+
+                <!-- Alejandro -->
+                <article class="officer-card">
+                    <img src="assets/images/leadership/Alejandro.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Alejandro Ontriveros</h3>
+                        <p class="officer-pronouns">He/Him</p>
+                        <p class="officer-role">Community Outreach Director</p>
+                        <p class="officer-major">Electrical & Computer Engineering</p>
+                    </div>
+                </article>
+
+                <!-- Yessenia -->
+                <article class="officer-card">
+                    <img src="assets/images/leadership/Yessenia.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Yessenia Martin</h3>
+                        <p class="officer-pronouns">She/Her</p>
+                        <p class="officer-role">Leadership Director</p>
+                        <p class="officer-major">Computer Science</p>
+                    </div>
+                </article>
+
+                <!-- ALexandra -->
+                <article class="officer-card">
+                    <img src="assets/images/leadership/Alexandra.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Alexandra Galindo</h3>
+                        <p class="officer-pronouns">She/Her</p>
+                        <p class="officer-role">Professional Director</p>
+                        <p class="officer-major">Electrical & Computer Engineering</p>
+                    </div>
+                </article>
+
+                <!-- Eve -->
+                <article class="officer-card">
+                    <img src="assets/images/leadership/Evelyn.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Evelyn Flores</h3>
+                        <p class="officer-pronouns">She/Her</p>
+                        <p class="officer-role">SHPEtina Director</p>
+                        <p class="officer-major">Areospace Engineering</p>
+                    </div>
+                </article>
+
+                <!-- Kevin -->
+                <article class="officer-card">
+                    <img src="assets/images/leadership/Kevin.png">
+                    <div class="officer-body">
+                        <h3 class="officer-name">Kevin Contreras</h3>
+                        <p class="officer-pronouns">He/Him</p>
+                        <p class="officer-role">Technical Director</p>
+                        <p class="officer-major">Mechanical Engineering</p>
+                    </div>
+                </article>
+
+            </div>
+        </section>
     </main>
 
 </body>
