--- a/leadership.html
+++ b/leadership.html
@@ -109,7 +109,7 @@
 
         <!-- Board of Directors -->
         <section class="leader-section section">
-            <h2 class="leader-h2">Board of Directors></h2>
+            <h2 class="leader-h2">Board of Directors</h2>
             <div class="leader-grid">
                 <!-- David -->
                 <article class="officer-card">
