--- a/membership.html
+++ b/membership.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>UT SHPE</title>
+    <link rel="icon" href="assets/images/SHPE_logo.png"> 
+    <link rel="stylesheet" href="assets/css/style.css"> <!-- linkage to css code -->
+    <link rel="stylesheet" href="assets/css/membership.css">
+    <!-- Icons for footer -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <script src="assets/javascript/membership.js" defer></script>
+</head>
