--- a/membership.html
+++ b/membership.html
@@ -11,3 +11,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <script src="assets/javascript/membership.js" defer></script>
 </head>
+
+    <body>
+    <!-- Navbar-->
+    <header class="nav">
+        <a class="brand" href="index.html"> 
+            <img src="assets/images/navbar_logo.png"> <!-- clickable logo -->
+        </a>
+
+        <!-- Navbar menu links -->
+        <nav class="menu">
+            <a href="About_Us.html" class="nav-link">About Us</a>
+            <a href="leadership.html" class="nav-link">Leadership</a>
+            <a href="sponsorship.html" class="nav-link">Sponsorship</a>
+            <!-- special case for shpetinas, will be bold pink-->
+            <a href="shpetinas.html" class="nav-link shpetinas">SHPEtinas</a>
+            <a href="membership.html" class="nav-link active">Membership</a>
+            <a href="resources.html" class="nav-link">Resources</a>                
+        </nav>
+    </header>
