--- a/leadership.html
+++ b/leadership.html
@@ -48,7 +48,7 @@
 
         <section class="leader-section section">
             <h2 class="leader-h2">Executive Board</h2>
-            <div class="leader-grid eboard">
+            <div class="leader-grid">
                 <!-- Genesis -->
                 <article class="officer-card">
                     <img src="assets/images/Leadership/Genesis.png">
