--- a/leadership.html
+++ b/leadership.html
@@ -110,7 +110,7 @@
         <!-- Board of Directors -->
         <section class="leader-section section">
             <h2 class="leader-h2">Board of Directors</h2>
-            <div class="leader-grid">
+            <div class="leader-grid bod">
                 <!-- David -->
                 <article class="officer-card">
                     <img src="assets/images/Leadership/David.png">
