--- a/leadership.html
+++ b/leadership.html
@@ -108,7 +108,7 @@
         </section>
 
         <!-- Board of Directors -->
-        <section class="leader-section section">
+        <section class="section leader-section">
             <h2 class="leader-h2">Board of Directors</h2>
             <div class="leader-grid bod">
                 <!-- David -->
