--- a/sponsorship.html
+++ b/sponsorship.html
@@ -31,7 +31,10 @@
         </nav>
     </header>
 
-    <!-- Sponsors
+    <!-- Sponsors section -->
+    <main class="sponsor-page" role="main">
+        <section class="sponsors-header">
+            <div
 
     <!-- Footer -->
     <div class="site-footer">
