--- a/sponsorship.html
+++ b/sponsorship.html
@@ -33,9 +33,28 @@
 
     <!-- Sponsors section -->
     <main class="sponsor-page" role="main">
-        <section class="sponsors-header">
-            <div
+        <section class="section sponsor-hero">
+            <div class="hero-left card-blue">
+                <h2 class="hero-title">Thank You to Our Sponsors!</h2>
+                <p class="hero-text">
+                    A special thank you to all companies who have supported us this year! Your commitment in
+                    empowering Hispanics in STEM is one-of-a-kind and will provide lots of opportunities for our
+                    members. Your support represents the hope and the desire for a better future. Our chapter and
+                    leadership team gratefully appreciate you for believing in us! 
+                </p>
+            </div>
 
+            <div class="hero-right">
+                <div class="sponsor-slideshow" aria-label="Sponsor event photos">
+                    <img src="assets/images/sponsors/ ">
+                    <img src="assets/images/sponsors/ ">
+                    <img src="assets/images/sponsors/ ">
+                    <img src="assets/images/sponsors/ ">
+                </div>
+            </div>
+        </section>
+
+        
     <!-- Footer -->
     <div class="site-footer">
         <div class="footer-grid">
