--- a/sponsorship.html
+++ b/sponsorship.html
@@ -46,10 +46,9 @@
 
             <div class="hero-right">
                 <div class="sponsor-slideshow" aria-label="Sponsor event photos">
-                    <img src="assets/images/sponsors/ ">
-                    <img src="assets/images/sponsors/ ">
-                    <img src="assets/images/sponsors/ ">
-                    <img src="assets/images/sponsors/ ">
+                    <img src="assets/images/sponsors/Sponsorpage.jpg">
+                    <img src="assets/images/sponsors/Sponsorspage2.jpg">
+                    <img src="assets/images/sponsors/Sponsorspage3.jpg">
                 </div>
             </div>
         </section>
