--- a/sponsorship.html
+++ b/sponsorship.html
@@ -52,7 +52,27 @@
                 </div>
             </div>
         </section>
+
+        <!-- Our sponsors section -->
+        <section class="section all-sponsors">
+            <h2 class="section-title">Our Sponsors</h2>
+            <div class="sponsor-grid">
+
+                <article class="logo-card"><img src="assets/images/sponsors/ARM_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/Accenture_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/BP_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/Dell_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/LPL_Financial_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/Micron_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/PG_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/Spectrum_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/Tesla_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/Texas_Instruments_logo.png"></article>
+                <article class="logo-card"><img src="assets/images/sponsors/lockheedmartin_logo.png"></article>
+            </div>
+        </section>
     </main>
+    
 
         
     <!-- Footer -->
