--- a/sponsorship.html
+++ b/sponsorship.html
@@ -71,6 +71,23 @@
                 <article class="logo-card"><img src="assets/images/sponsors/lockheedmartin_logo.png"></article>
             </div>
         </section>
+
+        <section class="section cta-sponsor">
+            <div class="cta-card">
+                <h2 class="cta-title">Become a Sponsor Today</h2>
+                <hr class="cta-rule">
+                <p class="cta-text">
+                    Become a sponsor by contacting our Corporate Director at
+                    <a class="cta-link" href="mailto:utshpe@gmail.com">utshpe@gmail.com</a>.
+                    Your support helps UT SHPE students drive toward their goals. We’re happy to answer any
+                    questions you have, including specific event donations.
+                </p>
+                <a class="btn-csp" href="assets/files/UT-SHPE 25-26 Corporate Slicitation Packet.pdf" target="_blank" rel="noopener">
+                  <i class="fa-solid fa-file-pdf"></i>
+                  View Corporate Sponsorship Packet (PDF)
+                </a>
+            </div>
+        </section>
     </main>
     
 
